tests/neg/type_alias_unknown_target_type.baa
// EXPECT: نوع هدف غير معروف في الاسم البديل

نوع اسم_مجهول = هيكل غير_معروف.

صحيح الرئيسية() {
    إرجع ٠.
}
